--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -47,6 +47,11 @@
       <artifactId>messagebus-spi</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>messagebus-util</artifactId>
+    </dependency>
+
     <!-- Testing Dependencies -->
     <dependency>
       <groupId>junit</groupId>
