--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -51,6 +51,12 @@
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>messagebus-util</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>org.opendaylight.netconf</groupId>
+      <artifactId>sal-netconf-connector</artifactId>
+      <version>1.4.1-Boron-SR1</version>
+    </dependency>
 
     <!-- Testing Dependencies -->
     <dependency>
